# data_uzum

./: .gitignore  README.md  as.py  main.py  product.py  pyproject.toml  s.py
admin/: admin.py
core/: core.py
database/: base.py  token.py  users.py
handler/: data.py  user.py
servise/: data.py
states/: user.py
ut/: t.py  t2.py
utils/: keyboard.py  utils.py
