[project]
name = "pythonproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.28.2",
    "aiohttp<3.14",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pydentic>=0.0.1.dev3",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "v>=1",
]
